Mon Jun  6 22:17:26 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * ace/CDR_Base.h:

          The struct just added by Jeff also needs the export macro.

Mon Jun  6 19:51:27 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Base.cpp:
        * ace/CDR_Base.h:

          Added a struct LongDoubleAssign which inherits from LongDouble,
          and contains the assignment operator and constructors, as well
          as a cast operator to LongDouble. This scheme allows generated
          code to use the LongDouble struct (when no 16-byte native long
          double exists) as a member in C++ unions, and to be initialized
          (when it appears as a constant) with the default copy constructor
          from LongDouble, converted from the supplied LongDoubleAssign,
          which is in turn initialized from the rhs literal. Thanks to
          Adam Mitz <mitza at ociweb dot com> for the LongDoubleAssign
          suggestion to work around the C++ union restriction.

Mon Jun  6 16:59:29 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Fixed typo

        * include/makeinclude/platform_g++_common.GNU:
          Added support for c++0x, adding this to your platform_macros.GNU
          enables the g++ c++0x extensions

Mon Jun  6 13:44:14 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/IPC_SAP/SSL_SAP/SSL-client-simple.cpp:
          Fixed gcc 4.6 warning.

Fri Jun  3 18:46:50 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Base.h:

          Made the ACE_CDR::LongDouble struct constructor from native
          long double explicit, which eliminates compiler ambiguities
          when the struct's '==' and '!=' operators are used with
          a native long double rhs.

Wed Jun  1 19:30:44 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Base.cpp:
        * ace/CDR_Base.h:

          To the struct ACE_CDR::LongDouble, used for platforms with